--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>List of Cohort  Participants</h1>
     <ul class="list-unstyled">
-        <li>Jeff Ammons, Instructor</li>
+        <li>Shawn Top Student</li>
     </ul>
     
 </body>
