--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul class="list-unstyled">
         <li>Jeff Ammons, Instructor</li>
         <li>Shawn Top Student</li>
+        <li>Nicole, student</li>
     </ul>
     
 </body>
